# fastapi-faust-poc

./: LICENSE  README.md  pyproject.toml
app/: main.py
app/api/: api.py
app/core/: settings.py
